syntax = "proto3";

package aggregator;

service Aggregator {
    rpc SaveFaceAttributes (FaceResult) returns (FaceResultResponse) {}
}

message FaceResult {
    string time = 1;
    bytes frame = 2;
    string image_id = 3;
    string original_filename = 4;
    repeated FaceData faces = 5;
}

message BoundingBox {
    int32 x = 1;
    int32 y = 2;
    int32 width = 3;
    int32 height = 4;
}

message EmotionInfo {
    string emotion = 1;
    float confidence = 2;
    map<string, float> emotions = 3;
}

message LandmarkInfo {
    repeated float landmarks = 1;
}

message FaceData {
    string face_id = 1;
    bytes face_image = 2;
    BoundingBox bbox = 3;
    EmotionInfo emotion = 4;
    LandmarkInfo landmarks = 5;
}

message FaceResultResponse {
    bool response = 1;
    string message = 2;
    repeated FaceData faces = 3;
} 